# veriopsbot

./: .env.apis  .gitignore  README.md  beauty_products.txt  beuty_salon.txt  docker-compose.yml  kb.md
veridata/veridata_admin/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
veridata/veridata_admin/app/: admin.py  database.py  main.py  ops.py
veridata/veridata_admin/app/core/: logging.py
veridata/veridata_admin/app/integrations/: chatwoot.py
veridata/veridata_admin/app/jobs/: auto_resolve.py
veridata/veridata_admin/app/models/: __init__.py  db.py
veridata/veridata_admin/app/scripts/: pre_start.py
veridata/veridata_admin/app/templates/sqladmin/: layout.html
veridata/veridata_bot/: Dockerfile  README.md  debug_clients.py  debug_rag.py  docker-compose.yml  inspect_fastcrud.py  inspection_output.txt  main.py  pyproject.toml  start.sh
veridata/veridata_bot/app/: database.py  main.py  pre_start.py
veridata/veridata_bot/app/admin/: views.py
veridata/veridata_bot/app/agent/: graph.py  nodes.py  prompts.py  state.py  summarizer.py  tools.py
veridata/veridata_bot/app/api/: endpoints.py  ops.py
veridata/veridata_bot/app/bot/: actions.py  engine.py  utils.py
veridata/veridata_bot/app/controller/: admin.py  evolution.py
veridata/veridata_bot/app/core/: config.py  database.py  db.py  llm_config.py  logging.py
veridata/veridata_bot/app/dtos/: __init__.py  persistence.py  webhook.py
veridata/veridata_bot/app/integrations/: chatwoot.py  espocrm.py  rag.py  sheets.py  transcription.py
veridata/veridata_bot/app/integrations/calendar/: base.py  calcom.py  factory.py
veridata/veridata_bot/app/integrations/crm/: espocrm.py  formatting.py  hubspot.py
veridata/veridata_bot/app/models/: __init__.py  client.py  clients.py  config.py  integration.py  session.py  sessions.py  subscription.py  user.py
veridata/veridata_bot/app/routers/: admin.py  api.py  auth.py  integrations.py  webhooks.py
veridata/veridata_bot/app/schemas/: __init__.py  clients.py
veridata/veridata_bot/app/scripts/: pre_start.py
veridata/veridata_bot/app/services/: chatwoot.py  chatwoot_service.py  espocrm.py  evolution_service.py  mattermost.py  messaging.py  rag.py  rag_service.py  scheduler.py  telegram.py  telegram_service.py
veridata/veridata_bot/app/templates/: admin_clients.html  admin_dashboard.html  base.html  client_integrations.html  dashboard.html  login.html  logs_template.py  sessions.html  user_dashboard.html  user_login.html
veridata/veridata_bot/app/templates/partials/: global_toggle_btn.html  mapping_row.html  session_row.html  (+1 more)
veridata/veridata_bot/tests/: conftest.py  manual_calcom_factory_test.py  manual_test_graph.py  test_correction_logic.py  test_e2e.py
veridata/veridata_integrator/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
veridata/veridata_integrator/app/: database.py  main.py  models.py  schemas.py
veridata/veridata_rag/: .dockerignore  .env.example  Dockerfile  README.md  debug_rag.py  docker-compose.yml  pyproject.toml
veridata/veridata_rag/migrations/: env.py
veridata/veridata_rag/migrations/versions/: 0914bef95298_enable_rls.py  c8ae8a63604c_initial_schema.py
veridata/veridata_rag/src/: db.py  embeddings.py  hyde.py  llm_factory.py  main.py  memory.py  prompts.py  rag.py  rerank.py  schemas.py  transcription.py  vlm.py
veridata/veridata_rag/src/config/: config.json  config.py  logging.py
veridata/veridata_rag/src/controllers/: api.py  ops.py  web.py
veridata/veridata_rag/src/models/: __init__.py  db.py  schemas.py
veridata/veridata_rag/src/scripts/: pre_start.py
veridata/veridata_rag/src/services/: config_service.py  embeddings.py  hyde.py  llm_factory.py  memory.py  rag.py  rag_flow.py  rerank.py  vlm.py
veridata/veridata_rag/src/storage/: db.py  engine.py  repository.py
veridata/veridata_rag/src/templates/: index.html  logs.html
veridata/veridata_rag/src/utils/: auth.py  prompts.py
(+124 files in other folders)
