[project]
name = "veridata-worker"
version = "0.1.0"
description = "Background worker for Veridata synchronization jobs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqladmin>=0.16.0",
    "sqlmodel>=0.0.14",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pydantic-settings>=2.1.0",
    "bcrypt>=4.1.2",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1.2",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
]
