[project]
name = "veridata-bot"
version = "0.1.0"
description = "Multitenant middleware bot for VeriOps"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "sqladmin",
    "pydantic-settings",
    "httpx",
    "python-multipart",
    "psycopg2-binary",
    "alembic",
    "requests"
]

[tool.setuptools]
packages = ["app"]
