[project]
name = "veridata-bot"
version = "0.1.0"
description = "Multi-tenant bot service for Veridata"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "fastcrud>=0.12.0",
    "sqladmin>=0.16.0",
    "httpx>=0.26.0",
    "pydantic-settings>=2.1.0",
    "alembic>=1.13.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1.2",
    "uvloop>=0.19.0; sys_platform != 'win32'",
    "jinja2>=3.1.3",
    "tenacity>=8.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

