[project]
name = "veridata-bot"
version = "0.1.0"
description = "Multi-tenant bot service for Veridata"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "fastcrud>=0.12.0",
    "httpx>=0.26.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "alembic>=1.13.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1.2",
    "uvloop>=0.19.0; sys_platform != 'win32'",
    "jinja2>=3.1.3",
    "tenacity>=8.2.3",
    "langgraph>=1.0.5",
    "langchain>=1.2.3",
    "langchain-openai>=1.1.7",
    "langchain-postgres>=0.0.16",
    "langchain-google-genai>=4.1.3",
    "google-genai>=0.2.0",
    "openai>=1.10.0",
    "langfuse>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

